; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_draw_character_imp.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_draw_character_imp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ctx = common dso_local global i32 0, align 4
@g_font = common dso_local global i32 0, align 4
@ui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float, i32)* @ui_draw_character_imp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @ui_draw_character_imp(float %0, float %1, i32 %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store float %0, float* %4, align 4
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @ctx, align 4
  %10 = load i32, i32* @g_font, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @fz_encode_character_with_fallback(i32 %9, i32 %10, i32 %11, i32 0, i32 0, i32** %7)
  store i32 %12, i32* %8, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ui, i32 0, i32 0), align 4
  %15 = load i32, i32* %8, align 4
  %16 = load float, float* %4, align 4
  %17 = load float, float* %5, align 4
  %18 = call float @ui_draw_glyph(i32* %13, i32 %14, i32 %15, float %16, float %17)
  ret float %18
}

declare dso_local i32 @fz_encode_character_with_fallback(i32, i32, i32, i32, i32, i32**) #1

declare dso_local float @ui_draw_glyph(i32*, i32, i32, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
